[package]
name = "grubbnet"
version = "0.1.6"
authors = ["Declan Hopkins <hopkins.declan@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dooskington/grubbnet"
homepage = "https://crates.io/crates/grubbnet"
description = "Lightweight TCP client/server library for writing networked applications and games"

[lib]
name = "grubbnet"
crate-type = ["rlib"]

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
byteorder = "1"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.4"
openssl = { version = "0.10.5", optional = true }
bcrypt = { version = "0.14", optional = true }

[features]
crypto = ["openssl", "bcrypt"]